# brafhy

./: README.md  docker-compose.yml
back/: .env.example  Cargo.toml  Dockerfile  entrypoint.sh
back/migrations/: 20240108173627_init.sql
back/src/: main.rs
back/src/handlers/: chat_create.rs  login.rs  me_handler.rs  mod.rs  register.rs
back/src/models/: chat.rs  mod.rs  user.rs
back/src/modules/: ws.rs
back/src/util/: jwt.rs
front/: .dockerignore  Dockerfile  formkit.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
front/src/: App.vue  formkit.config.ts  main.ts  style.css
front/src/components/: Cards.vue  Footer.vue  Header.vue  Info.vue  Slides.vue
front/src/router/: index.ts
front/src/services/: api.ts
front/src/services/dto/: index.ts  login.dto.ts  register.dto.ts
front/src/views/: Cards.vue  Home.vue  Login.vue
