[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
serde = { version = "1.0.195", features = ["derive"] }
socketioxide = { version = "0.10.0", features = [ "tracing"] }
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "chrono", "uuid", "postgres" ] }
dotenvy = "0.15.7"
serde_json = "1.0.111"
bcrypt = "0.15.0"
jsonwebtoken = "9.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
axum-extra = { version = "0.9.1", features = ["cookie"] }
